python/src/tests/exceptions/ill-typed/ambiguous-panic-type-4.stella
language core;

extend with #panic;

fn main(n : Nat) -> fn(Bool) -> Nat {
    return (fn (b : Bool) { return panic! } : fn(Bool) -> Nat)(true)
}
